fixed wrapping overflows and create event page

--- a/frontend/src/components/EventsComponents/EventList/EventList.css
+++ b/frontend/src/components/EventsComponents/EventList/EventList.css
@@ -61,3 +61,7 @@
 .infoEvents>p {
     flex-wrap: inherit;
 }
+.cardEvents>p{
+    height: 35px;
+    overflow: hidden;
+}
